--- a/jupyter_notebook/explore_blast_output.ipynb
+++ b/jupyter_notebook/explore_blast_output.ipynb
@@ -31,19 +31,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in ./ve/lib/python3.7/site-packages (0.24.2)\r\n",
-      "Requirement already satisfied: pytz>=2011k in ./ve/lib/python3.7/site-packages (from pandas) (2019.1)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.5.0 in ./ve/lib/python3.7/site-packages (from pandas) (2.8.0)\r\n",
-      "Requirement already satisfied: numpy>=1.12.0 in ./ve/lib/python3.7/site-packages (from pandas) (1.16.2)\r\n",
-      "Requirement already satisfied: six>=1.5 in ./ve/lib/python3.7/site-packages (from python-dateutil>=2.5.0->pandas) (1.12.0)\r\n"
+      "Requirement already satisfied: pandas in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (0.24.2)\r\n",
+      "Requirement already satisfied: numpy>=1.12.0 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas) (1.16.2)\r\n",
+      "Requirement already satisfied: pytz>=2011k in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas) (2019.1)\r\n",
+      "Requirement already satisfied: python-dateutil>=2.5.0 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas) (2.8.0)\r\n",
+      "Requirement already satisfied: six>=1.5 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from python-dateutil>=2.5.0->pandas) (1.12.0)\r\n"
      ]
     }
    ],
@@ -54,21 +52,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pysradb in ./ve/lib/python3.7/site-packages (0.9.0)\n",
-      "Requirement already satisfied: tqdm>=4.28 in ./ve/lib/python3.7/site-packages (from pysradb) (4.31.1)\n",
-      "Requirement already satisfied: pandas>=0.23.4 in ./ve/lib/python3.7/site-packages (from pysradb) (0.24.2)\n",
-      "Requirement already satisfied: numpy>=1.12.0 in ./ve/lib/python3.7/site-packages (from pandas>=0.23.4->pysradb) (1.16.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.5.0 in ./ve/lib/python3.7/site-packages (from pandas>=0.23.4->pysradb) (2.8.0)\n",
-      "Requirement already satisfied: pytz>=2011k in ./ve/lib/python3.7/site-packages (from pandas>=0.23.4->pysradb) (2019.1)\n",
-      "Requirement already satisfied: six>=1.5 in ./ve/lib/python3.7/site-packages (from python-dateutil>=2.5.0->pandas>=0.23.4->pysradb) (1.12.0)\n"
+      "Requirement already satisfied: pysradb in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (0.9.0)\n",
+      "Requirement already satisfied: pandas>=0.23.4 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pysradb) (0.24.2)\n",
+      "Requirement already satisfied: tqdm>=4.28 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pysradb) (4.31.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.5.0 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas>=0.23.4->pysradb) (2.8.0)\n",
+      "Requirement already satisfied: numpy>=1.12.0 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas>=0.23.4->pysradb) (1.16.2)\n",
+      "Requirement already satisfied: pytz>=2011k in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas>=0.23.4->pysradb) (2019.1)\n",
+      "Requirement already satisfied: six>=1.5 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from python-dateutil>=2.5.0->pandas>=0.23.4->pysradb) (1.12.0)\n"
      ]
     }
    ],
@@ -1018,113 +1014,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Real-world example and external data"
+    "### Real-world example and external data\n",
+    "\n",
+    "The example function `identity_percent` above  was kept simple on purpose. In your own custom functions, you may want to access external data. See the three suggestions below."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The example function `identity_percent` above  was kept simple on purpose. In your own custom functions, you may want to access external data. [`Biopython`](https://biopython.org/wiki/Documentation) provides many other useful tools. In particular, it gives you access to the full power of [NCBI's Entrez data retrieval system](http://biopython.org/DIST/docs/tutorial/Tutorial.html#htoc116). Its [efetch](http://biopython.org/DIST/docs/api/Bio.Entrez-module.html#efetch) function can query SRA directly. See [here](https://github.com/nelas/sra.py/blob/master/sra.py) for examples. Advanced queries can be built with this [web interface](https://www.ncbi.nlm.nih.gov/sra/advanced).\n",
+    "#### SRA metadata\n",
     "\n",
-    "If you want to query SRA's metadata quickly, an alternative is to download them locally as a compressed SQLite3 database (2.5 Gb, 37 Gb once extracted) from [this lab](http://gbnci.abcc.ncifcrf.gov/sra/index.php) ([direct link](https://gbnci-abcc.ncifcrf.gov/backup/SRAmetadb.sqlite.gz), [mirror](https://s3.amazonaws.com/starbuck1/sradb/SRAmetadb.sqlite.gz)). To use these metadata, either use `sqlite3` [directly](https://edwards.sdsu.edu/research/sra-metadata/) or try [pysradb](https://saket-choudhary.me/pysradb/) ([example notebook](https://nbviewer.jupyter.org/github/saketkc/pysradb/blob/master/notebooks/01.SRAdb-demo.ipynb)).\n",
+    "SRA's metadata can be downloaded locally as a compressed SQLite3 database (2.5 Gb, 37 Gb once extracted) from [this lab](http://gbnci.abcc.ncifcrf.gov/sra/index.php) ([direct link](https://gbnci-abcc.ncifcrf.gov/backup/SRAmetadb.sqlite.gz), [mirror](https://s3.amazonaws.com/starbuck1/sradb/SRAmetadb.sqlite.gz)). To explore these metadata, either use `sqlite3` [directly](https://edwards.sdsu.edu/research/sra-metadata/) or try [pysradb](https://saket-choudhary.me/pysradb/) ([example notebook](https://nbviewer.jupyter.org/github/saketkc/pysradb/blob/master/notebooks/01.SRAdb-demo.ipynb)).\n",
     "\n",
     "Example with `pysradb`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>study_accession</th>\n",
-       "      <th>experiment_accession</th>\n",
-       "      <th>sample_accession</th>\n",
-       "      <th>run_accession</th>\n",
-       "      <th>experiment_title</th>\n",
-       "      <th>experiment_attribute</th>\n",
-       "      <th>sample_attribute</th>\n",
-       "      <th>taxon_id</th>\n",
-       "      <th>library_selection</th>\n",
-       "      <th>library_layout</th>\n",
-       "      <th>library_strategy</th>\n",
-       "      <th>library_source</th>\n",
-       "      <th>library_name</th>\n",
-       "      <th>bases</th>\n",
-       "      <th>spots</th>\n",
-       "      <th>adapter_spec</th>\n",
-       "      <th>avg_read_length</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>DRP000451</td>\n",
-       "      <td>DRX000965</td>\n",
-       "      <td>DRS000920</td>\n",
-       "      <td>DRR001369</td>\n",
-       "      <td>fungal community of traditional Korean alcohol...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>sample_name: DRS000920 || sample comment: In t...</td>\n",
-       "      <td>870726</td>\n",
-       "      <td>PCR</td>\n",
-       "      <td>SINGLE -</td>\n",
-       "      <td>AMPLICON</td>\n",
-       "      <td>METAGENOMIC</td>\n",
-       "      <td>microbial community of traditional Korean alco...</td>\n",
-       "      <td>83371775</td>\n",
-       "      <td>139727</td>\n",
-       "      <td>None</td>\n",
-       "      <td>596.676197</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  study_accession experiment_accession sample_accession run_accession  \\\n",
-       "0       DRP000451            DRX000965        DRS000920     DRR001369   \n",
-       "\n",
-       "                                    experiment_title experiment_attribute  \\\n",
-       "0  fungal community of traditional Korean alcohol...                 None   \n",
-       "\n",
-       "                                    sample_attribute  taxon_id  \\\n",
-       "0  sample_name: DRS000920 || sample comment: In t...    870726   \n",
-       "\n",
-       "  library_selection library_layout library_strategy library_source  \\\n",
-       "0               PCR      SINGLE -          AMPLICON    METAGENOMIC   \n",
-       "\n",
-       "                                        library_name     bases   spots  \\\n",
-       "0  microbial community of traditional Korean alco...  83371775  139727   \n",
-       "\n",
-       "  adapter_spec  avg_read_length  \n",
-       "0         None       596.676197  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "OperationalError",
+     "evalue": "no such table: metaInfo",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-71f510d29a54>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# download_sradb_file()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mdb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSRAdb\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'SRAmetadb.sqlite'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msra_metadata\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DRR001369'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdetailed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages/pysradb/sradb.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, sqlite_file)\u001b[0m\n\u001b[1;32m    167\u001b[0m         \"\"\"\n\u001b[1;32m    168\u001b[0m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSRAdb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msqlite_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 169\u001b[0;31m         \u001b[0m_verify_srametadb\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msqlite_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    170\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_db_type\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"SRA\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    171\u001b[0m         self.valid_in_acc_type = [\n",
+      "\u001b[0;32m~/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages/pysradb/sradb.py\u001b[0m in \u001b[0;36m_verify_srametadb\u001b[0;34m(filepath)\u001b[0m\n\u001b[1;32m    144\u001b[0m         )\n\u001b[1;32m    145\u001b[0m         \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 146\u001b[0;31m     \u001b[0mmetadata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SELECT * FROM metaInfo\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    147\u001b[0m     \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    148\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetadata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"schema version\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"1.0\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages/pysradb/basedb.py\u001b[0m in \u001b[0;36mquery\u001b[0;34m(self, sql_query)\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m         \"\"\"\n\u001b[0;32m--> 103\u001b[0;31m         \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msql_query\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    104\u001b[0m         \u001b[0mcolumn_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescription\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m         \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumn_names\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mOperationalError\u001b[0m: no such table: metaInfo"
+     ]
     }
    ],
    "source": [
@@ -1143,10 +1068,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note:\n",
+    "Notes:\n",
     "\n",
     "- On GNU/Linux, SRA can be mounted locally with a FUSE-module called [fusera](https://github.com/mitre/fusera).\n",
     "- You can also access SRA from your browser [here]( https://www.ncbi.nlm.nih.gov/sra), [browse runs](https://trace.ncbi.nlm.nih.gov/Traces/sra/?run=DRR001369), etc."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Use Entrez's API with BioPython\n",
+    "\n",
+    "[`Biopython`](https://biopython.org/wiki/Documentation) provides many other useful tools. In particular, it gives you access to the full power of [NCBI's Entrez data retrieval system](http://biopython.org/DIST/docs/tutorial/Tutorial.html#htoc116). Its [efetch](http://biopython.org/DIST/docs/api/Bio.Entrez-module.html#efetch) function can query SRA directly. See [here](https://github.com/nelas/sra.py/blob/master/sra.py) for examples. Advanced queries can be built with this [web interface](https://www.ncbi.nlm.nih.gov/sra/advanced)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### BioSample\n",
+    "\n",
+    "Many useful metadata can also be downloaded from [BioSample (xml - 790MB download)](https://www.ncbi.nlm.nih.gov/public/)."
    ]
   }
  ],
