Updated w/ Ensembl's REST API

--- a/jupyter_notebook/explore_blast_output.ipynb
+++ b/jupyter_notebook/explore_blast_output.ipynb
@@ -1091,6 +1091,15 @@
     "\n",
     "Many useful metadata can also be downloaded from [BioSample (xml - 790MB download)](https://www.ncbi.nlm.nih.gov/public/)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ensembl\n",
+    "\n",
+    "The [Ensembl REST API](http://rest.ensembl.org/) provides access to many european resources."
+   ]
   }
  ],
  "metadata": {
