Added export to CSV and JSON formats

--- a/jupyter_notebook/explore_blast_output.ipynb
+++ b/jupyter_notebook/explore_blast_output.ipynb
@@ -823,7 +823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more information, see the [Pandas documentation](http://pandas-docs.github.io/pandas-docs-travis/user_guide/io.html)."
+    "For more information (or formats, such as [CSV](http://pandas-docs.github.io/pandas-docs-travis/user_guide/io.html#io-store-in-csv) or [JSON](http://pandas-docs.github.io/pandas-docs-travis/user_guide/io.html#io-json-writer)), see the [Pandas documentation](http://pandas-docs.github.io/pandas-docs-travis/user_guide/io.html)."
    ]
   },
   {
