--- a/jupyter_notebook/explore_blast_output.ipynb
+++ b/jupyter_notebook/explore_blast_output.ipynb
@@ -31,17 +31,19 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (0.24.2)\r\n",
-      "Requirement already satisfied: numpy>=1.12.0 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas) (1.16.2)\r\n",
-      "Requirement already satisfied: pytz>=2011k in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas) (2019.1)\r\n",
-      "Requirement already satisfied: python-dateutil>=2.5.0 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas) (2.8.0)\r\n",
-      "Requirement already satisfied: six>=1.5 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from python-dateutil>=2.5.0->pandas) (1.12.0)\r\n"
+      "Requirement already satisfied: pandas in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (0.24.2)\n",
+      "Requirement already satisfied: numpy>=1.12.0 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas) (1.16.2)\n",
+      "Requirement already satisfied: pytz>=2011k in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas) (2019.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.5.0 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas) (2.8.0)\n",
+      "Requirement already satisfied: six>=1.5 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from python-dateutil>=2.5.0->pandas) (1.12.0)\n"
      ]
     }
    ],
@@ -52,19 +54,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pysradb in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (0.9.0)\n",
-      "Requirement already satisfied: pandas>=0.23.4 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pysradb) (0.24.2)\n",
-      "Requirement already satisfied: tqdm>=4.28 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pysradb) (4.31.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.5.0 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas>=0.23.4->pysradb) (2.8.0)\n",
-      "Requirement already satisfied: numpy>=1.12.0 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas>=0.23.4->pysradb) (1.16.2)\n",
-      "Requirement already satisfied: pytz>=2011k in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas>=0.23.4->pysradb) (2019.1)\n",
-      "Requirement already satisfied: six>=1.5 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from python-dateutil>=2.5.0->pandas>=0.23.4->pysradb) (1.12.0)\n"
+      "Requirement already satisfied: pysradb in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (0.9.0)\r\n",
+      "Requirement already satisfied: tqdm>=4.28 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pysradb) (4.31.1)\r\n",
+      "Requirement already satisfied: pandas>=0.23.4 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pysradb) (0.24.2)\r\n",
+      "Requirement already satisfied: pytz>=2011k in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas>=0.23.4->pysradb) (2019.1)\r\n",
+      "Requirement already satisfied: python-dateutil>=2.5.0 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas>=0.23.4->pysradb) (2.8.0)\r\n",
+      "Requirement already satisfied: numpy>=1.12.0 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from pandas>=0.23.4->pysradb) (1.16.2)\r\n",
+      "Requirement already satisfied: six>=1.5 in /home/aurelien/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages (from python-dateutil>=2.5.0->pandas>=0.23.4->pysradb) (1.12.0)\r\n"
      ]
     }
    ],
@@ -823,7 +827,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more information (or formats, such as [CSV](http://pandas-docs.github.io/pandas-docs-travis/user_guide/io.html#io-store-in-csv) or [JSON](http://pandas-docs.github.io/pandas-docs-travis/user_guide/io.html#io-json-writer)), see the [Pandas documentation](http://pandas-docs.github.io/pandas-docs-travis/user_guide/io.html)."
+    "The `to_pickle` and `read_pickle` functions are Python specific. A dataframe can also be exported in an interoperable format, such as [CSV](http://pandas-docs.github.io/pandas-docs-travis/user_guide/io.html#io-store-in-csv) or [JSON](http://pandas-docs.github.io/pandas-docs-travis/user_guide/io.html#io-json-writer):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blast_output.to_csv(\"blast_output.csv\")\n",
+    "blast_output.to_json(\"blast_output.json\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For more information, see the [Pandas documentation](http://pandas-docs.github.io/pandas-docs-travis/user_guide/io.html)."
    ]
   },
   {
@@ -849,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1022,7 @@
        "4      69/69  0/69               1.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -1044,7 +1065,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-71f510d29a54>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# download_sradb_file()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mdb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSRAdb\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'SRAmetadb.sqlite'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msra_metadata\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DRR001369'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdetailed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-15-71f510d29a54>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# download_sradb_file()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mdb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSRAdb\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'SRAmetadb.sqlite'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msra_metadata\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DRR001369'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdetailed\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages/pysradb/sradb.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, sqlite_file)\u001b[0m\n\u001b[1;32m    167\u001b[0m         \"\"\"\n\u001b[1;32m    168\u001b[0m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mSRAdb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msqlite_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 169\u001b[0;31m         \u001b[0m_verify_srametadb\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msqlite_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    170\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_db_type\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"SRA\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    171\u001b[0m         self.valid_in_acc_type = [\n",
       "\u001b[0;32m~/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages/pysradb/sradb.py\u001b[0m in \u001b[0;36m_verify_srametadb\u001b[0;34m(filepath)\u001b[0m\n\u001b[1;32m    144\u001b[0m         )\n\u001b[1;32m    145\u001b[0m         \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 146\u001b[0;31m     \u001b[0mmetadata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"SELECT * FROM metaInfo\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    147\u001b[0m     \u001b[0mdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    148\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmetadata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"schema version\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"1.0\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/activite/latitude77/realisation/find/sra/blast_output_parser/ve/lib/python3.7/site-packages/pysradb/basedb.py\u001b[0m in \u001b[0;36mquery\u001b[0;34m(self, sql_query)\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m         \"\"\"\n\u001b[0;32m--> 103\u001b[0;31m         \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msql_query\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    104\u001b[0m         \u001b[0mcolumn_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescription\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m         \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumn_names\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mresult\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
